spec/e2e/operator/add_num_nil.lit
1 + nil; # error: [line 1] Runtime error: Operands must be two numbers or two strings.
